zig/uv.zig


pub extern fn uv_udp_init_ex(loop: *Loop, handle: *Udp, flags: c_uint) c_int;
pub extern fn uv_udp_open(handle: *Udp, sock: OsSock) c_int;
pub extern fn uv_udp_bind(handle: *Udp, addr: *const std.posix.sockaddr, flags: c_uint) c_int;
pub extern fn uv_udp_connect(handle: *Udp, addr: ?*const std.posix.sockaddr) c_int;
pub extern fn uv_udp_getsockname(handle: *const Udp, name: *std.posix.sockaddr, namelen: *c_int) c_int;
pub extern fn uv_udp_send(req: *UdpSend, handle: *Udp, bufs: [*]const Buf, nbufs: c_uint, addr: ?*const std.posix.sockaddr, cb: UdpSendCb) c_int;
pub extern fn uv_udp_try_send(handle: *Udp, bufs: [*]const Buf, nbufs: c_uint, addr: ?*const std.posix.sockaddr) c_int;
pub extern fn uv_udp_recv_start(handle: *Udp, alloc_cb: AllocCb, recv_cb: UdpRecvCb) c_int;
pub extern fn uv_udp_recv_stop(handle: *Udp) c_int;
pub extern fn uv_udp_set_broadcast(handle: *Udp, on: c_int) c_int;

pub extern fn uv_getaddrinfo(loop: *Loop, req: *GetAddrInfo, cb: ?GetAddrInfoCb, node: ?[*:0]const u8, service: ?[*:0]const u8, hints: ?*const std.c.addrinfo) c_int;
pub extern fn uv_freeaddrinfo(ai: ?*std.c.addrinfo) void;
pub extern fn uv_getnameinfo(loop: *Loop, req: *GetNameInfo, cb: ?GetNameInfoCb, addr: *const std.posix.sockaddr, flags: c_int) c_int;
pub extern fn uv_ip4_addr(ip: [*:0]const u8, port: c_int, addr: *std.posix.sockaddr.in) c_int;
pub extern fn uv_ip6_addr(ip: [*:0]const u8, port: c_int, addr: *std.posix.sockaddr.in6) c_int;
pub extern fn uv_ip_name(src: *const std.posix.sockaddr, dst: [*]u8, size: usize) c_int;
pub extern fn uv_inet_ntop(af: c_int, src: *const anyopaque, dst: [*]u8, size: usize) c_int;

pub extern fn uv_spawn(loop: *Loop, handle: *Process, options: *const ProcessOptions) c_int;
pub extern fn uv_process_kill(handle: *Process, signum: c_int) c_int;
pub extern fn uv_process_get_pid(handle: *const Process) Pid;

pub extern fn uv_strerror_r(err: c_int, buf: [*]u8, buflen: usize) [*:0]u8;
pub extern fn uv_err_name_r(err: c_int, buf: [*]u8, buflen: usize) [*:0]u8;
pub extern fn uv_translate_sys_error(sys_errno: c_int) c_int;
pub extern fn uv_disable_stdio_inheritance() void;

pub inline fn asHandle(ptr: anytype) *Handle {
    return @ptrCast(ptr);
}

pub inline fn asStream(ptr: anytype) *Stream {
    return @ptrCast(ptr);
}

pub inline fn asReq(ptr: anytype) *Req {
    return @ptrCast(ptr);
}

/// Every libuv handle and request starts with `void* data`, so the field is
/// reachable without knowing the concrete type.
pub inline fn getData(ptr: anytype) ?*anyopaque {
    return @as(*const ?*anyopaque, @ptrCast(@alignCast(ptr))).*;
}

pub inline fn setData(ptr: anytype, data: ?*anyopaque) void {
    @as(*?*anyopaque, @ptrCast(@alignCast(ptr))).* = data;
}

pub fn strerror(err: c_int, buf: []u8) [:0]const u8 {
    return std.mem.span(uv_strerror_r(err, buf.ptr, buf.len));
}

pub fn errName(err: c_int, buf: []u8) [:0]const u8 {
    return std.mem.span(uv_err_name_r(err, buf.ptr, buf.len));
}

/// Maps a libuv status back to the errno the Python layer should raise with.
pub fn toErrno(err: c_int) c_int {
    return -err;
}
